# DeskMate

./: .gitignore  AGENTS.md  BASELINE_PLAN.md  DATASET_DOWNLOAD_PLAN.md  DATASET_SOURCING.md  README.md  pyproject.toml  requirements-training.lock.txt  requirements-training.txt  start_highres_ai.ps1
configs/: baseline_classifier_hardening.toml  baseline_classifier_soups.toml  baseline_derived_views.toml  baseline_evaluation.toml  baseline_human_screened_intake.toml  baseline_inference.toml  baseline_inference_hardened_candidate.toml  baseline_inference_target5_robot.toml  baseline_localizer.toml  baseline_phase0.toml  baseline_phase1_data.toml  baseline_provisional_dataset.toml  baseline_sources.toml  baseline_target5_machine_soups.toml  baseline_target5_robot_soups.toml  baseline_training.toml  baseline_training_balanced300.toml  baseline_training_machine_merge.toml  baseline_training_merged_gapfill.toml  baseline_training_merged_gapfill_clean.toml  baseline_training_no_other_cat.toml  baseline_training_provisional.toml  baseline_training_robot_adaptation.toml  baseline_training_target5.toml  baseline_training_target5_clean_augmented.toml  baseline_training_target5_machine_merge.toml  baseline_training_target5_manual_curated_augmented.toml  baseline_training_target5_manual_curated_ragdoll_reviewed_augmented.toml  phase0_pilot_review.toml
data/: README.md
docs/: robot_pipeline.md
models/: README.md  manifest.yaml
plan/: README.md  log.md  target-plan.template.md
scripts/: README.md  __init__.py  artifact_inventory.py  audit_phase1_reviews.py  (+56 more)
(+224 files in other folders)
